@@ -5,18 +5,18 @@ import com.api.finance.core.domain.entity.EmprestimoEntity;
 import com.api.finance.core.domain.entity.ParcelaEntity;
 import com.api.finance.core.dto.EmprestimoDTO;
 import com.api.finance.core.services.sistema.CalculadoraJuros;
+import com.api.finance.core.services.sistema.Data;
 import com.api.finance.core.services.tabela.ParcelaService;
 import com.api.finance.core.utils.enums.StatusParcela;
 import com.api.finance.core.utils.enums.TipoCobranca;
 import com.api.finance.core.utils.enums.TipoEmprestimo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import com.api.finance.core.services.sistema.Data;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class EmprestimosService {
@@ -27,7 +27,12 @@ public class EmprestimosService {
     @Autowired
     ParcelaService parcelaService;
 
+    @Autowired
+    ParcelasService parcelasService;
 
+    // -----------------------------------------------------------
+    // CRIAÇÃO DE EMPRÉSTIMO
+    // -----------------------------------------------------------
     public ResponseEntity<Map<String, String>> criarEmprestimo(UserEntity userGestor, EmprestimoDTO body) {
 
         EmprestimoEntity emprestimo = new EmprestimoEntity();
@@ -40,52 +45,109 @@ public class EmprestimosService {
         emprestimo.setTipoEmprestimo(TipoEmprestimo.fromCode(body.getTipoEmprestimo()).getCode());
         emprestimo.setEmpresaId(userGestor.getEmpresacliente());
         emprestimo.setTipoCobranca(TipoCobranca.fromCode(body.getTipoCobranca()).getCode());
-        emprestimo.setDataFechamento(new Date().toString());
+        emprestimo.setDataFechamento(new Data().toString());
         emprestimo.setQuantidadeParcelas(body.getQuantidadeParcelas());
         emprestimo.setVencimentoPrimeiraParcela(body.getVencimentoPrimeiraParcela().toString());
+
         emprestimoTabelaService.save(emprestimo);
         gerarParcelas(userGestor, emprestimo);
 
         Map<String, String> response = new HashMap<>();
-        response.put("result", "Emprestimo cadastrado");
+        response.put("result", "Empréstimo cadastrado com sucesso");
         return ResponseEntity.ok(response);
     }
 
+    // -----------------------------------------------------------
+    // GERAÇÃO DAS PARCELAS
+    // -----------------------------------------------------------
     private void gerarParcelas(UserEntity userGestor, EmprestimoEntity emprestimo) {
-        BigDecimal valorParcelas = CalculadoraJuros.calcularParcela(emprestimo.getValor(), emprestimo.getQuantidadeParcelas(), emprestimo.getTaxaJuros(), emprestimo.getTipoEmprestimo());
+        BigDecimal valorParcelas = CalculadoraJuros.calcularParcela(
+                emprestimo.getValor(),
+                emprestimo.getQuantidadeParcelas(),
+                emprestimo.getTaxaJuros(),
+                emprestimo.getTipoEmprestimo()
+        );
+
         if (emprestimo.getTipoEmprestimo() == TipoEmprestimo.ESPECIAL.getCode()) {
             emprestimo.setQuantidadeParcelas(1);
         }
-        for (int i = 0; i < emprestimo.getQuantidadeParcelas(); i++) {
+
+        for (int i = 1; i <= emprestimo.getQuantidadeParcelas(); i++) {
             ParcelaEntity parcela = new ParcelaEntity();
             parcela.setEmprestimoId(emprestimo.getId());
-            parcela.setNumeroParcela(i + 1);
-            String vencimento = Data.gerarDataVencimento(new Data(emprestimo.getVencimentoPrimeiraParcela()), i, TipoCobranca.fromCode(emprestimo.getTipoCobranca()));
-            parcela.setVencimento(vencimento.toString());
+            parcela.setNumeroParcela(i);
+
+            // Usando a classe Data para gerar o vencimento
+            Data dataBase = new Data(emprestimo.getVencimentoPrimeiraParcela());
+            String vencimento = Data.gerarDataVencimento(dataBase, i, TipoCobranca.fromCode(emprestimo.getTipoCobranca()));
+            parcela.setVencimento(vencimento);
+
             parcela.setStatus(StatusParcela.PENDENTE.getCode());
             parcela.setValorOriginal(valorParcelas);
             parcela.setValorPago(BigDecimal.ZERO);
             parcela.setValorDesconto(BigDecimal.ZERO);
-            parcela.setJuros(BigDecimal.ZERO); //jurosPorVencimento
+            parcela.setJuros(BigDecimal.ZERO);
             parcela.setUsuarioUuid(userGestor.getId());
             parcela.setDataPagamento(null);
+
             parcelaService.save(parcela);
-
         }
-
     }
 
+    // -----------------------------------------------------------
+    // LISTAGEM DE EMPRÉSTIMOS (Entity → DTO)
+    // -----------------------------------------------------------
+    public List<EmprestimoDTO> listarEmprestimosCorrentesDTO(UserEntity userGestor) {
+        List<EmprestimoEntity> emprestimos = listarEmprestimosCorrentes(userGestor);
 
+        return emprestimos.stream()
+                .sorted(Comparator.comparing(EmprestimoEntity::getId))
+                .map(this::toDTO)
+                .collect(Collectors.toList());
+    }
 
+    private EmprestimoDTO toDTO(EmprestimoEntity e) {
+        Data vencimento = null;
+        Data fechamento = null;
 
+        try {
+            if (e.getVencimentoPrimeiraParcela() != null) {
+                vencimento = new Data(e.getVencimentoPrimeiraParcela());
+            }
+        } catch (Exception ignored) {}
+
+        try {
+            if (e.getDataFechamento() != null) {
+                fechamento = new Data(e.getDataFechamento());
+            }
+        } catch (Exception ignored) {}
+
+        return new EmprestimoDTO(
+                e.getId(),
+                e.getCliente(),
+                e.getContato(),
+                e.getValor(),
+                e.getTipoEmprestimo(),
+                e.getTaxaJuros(),
+                e.getQuantidadeParcelas(),
+                vencimento != null ? vencimento.toLocalDate() : null,
+                e.getTipoCobranca(),
+                null, // ou converter UUID se quiser mostrar
+                fechamento != null ? fechamento.toLocalDate() : null,
+                parcelasService.calculaValorResidual(e)
+        );
+    }
+
+    // -----------------------------------------------------------
+    // FILTRO DE EMPRÉSTIMOS ATIVOS
+    // -----------------------------------------------------------
     public List<EmprestimoEntity> listarEmprestimosCorrentes(UserEntity userGestor) {
-        // Busca todos os empréstimos da empresa do gestor logado
-        List<EmprestimoEntity> todosEmprestimos = emprestimoTabelaService.findByEmpresaId(userGestor.getEmpresacliente());
+        List<EmprestimoEntity> todosEmprestimos =
+                emprestimoTabelaService.findByEmpresaId(userGestor.getEmpresacliente());
 
-        // Filtra apenas os que têm parcelas pendentes
         return todosEmprestimos.stream()
                 .filter(e -> parcelaService.temParcelasPendentes(e.getId()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
